--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "6",
+    "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
